tests/ui/unsupported.stderr
error: Unions are not yet supported
 --> $DIR/unsupported.rs:7:7
  |
7 | union HumanBean1 {
  |       ^^^^^^^^^^

error: Use of `hashmap` on a non `MutableBTreeMap<K, V>`
  --> $DIR/unsupported.rs:14:16
   |
14 |     #[designal(hashmap)]
   |                ^^^^^^^

error: Use of `hashmap` on a non `MutableBTreeMap<K, V>`
  --> $DIR/unsupported.rs:21:16
   |
21 |     #[designal(hashmap)]
   |                ^^^^^^^
